syntax = "proto3";

message DeleteRequest {
  string id = 1;
}

message CreateRequest {
  string id = 1;
  string playerId1 = 2;
  string playerId2 = 3;
}

message CreateResponse {
  bool created = 1;
}

message DeleteResponse {
  bool deleted = 1;
}

service GameHandler {
  rpc CreateGame(CreateRequest) returns (CreateResponse);
  rpc DeleteGame(DeleteRequest) returns (DeleteResponse);
}
